@@ -1,5 +1,5 @@
 name    = Plack-Session-Store-MongoDB
-version = 0.1
+version = 0.2
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
