@@ -1,6 +1,7 @@
 Revision history for Plack-Session-Store-MongoDB
 
 {{$NEXT}}
+	- Fixed bug causing test modules to be listed as prereqs, thus causing tests to fail
 
 0.1       2010-08-10 20:42:20 Asia/Jerusalem
 	- initial release
